--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.28.0",
     "mongodb": "^3.6.2",
-    "mongoose": "^5.10.5"
+    "mongoose": "^5.10.5",
+    "multer": "^1.4.2"
   }
 }
