Category images upload success

--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "antd": "^4.6.4",
     "axios": "^0.20.0",
+    "cookie-parser": "^1.4.5",
     "formik": "^2.1.5",
     "mdbreact": "^4.27.0",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.1.0",
     "react-redux": "^7.2.1",
