--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.2",
     "formik": "^2.1.5",
     "react": "^16.13.1",
+    "jspdf": "^2.1.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.1.0",
