--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jspdf": "^2.1.1",
     "jspdf-autotable": "^3.5.13",
     "mdbreact": "^4.27.0",
+    "multer": "^1.4.2",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.1.0",
