--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.1.5",
     "moment": "^2.29.0",
     "multer": "^1.4.2",
+    "formik": "^2.1.5",
     "jspdf": "^2.1.1",
     "jspdf-autotable": "^3.5.13",
     "react": "^16.13.1",
