--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "antd": "^4.6.4",
     "axios": "^0.20.0",
     "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
     "formik": "^2.1.5",
     "infinite-react-carousel": "^1.2.11",
     "info": "0.0.6-beta.0",
